# voxmind-v2

./: .env.compose.example  .gitignore  Dockerfile  README.md  artifacts_manifest.json  delivery_package.json  docker-compose.yml  novo_prompt.txt  prompt.txt  prompt_ajuste_novo.txt  prompt_pos_ajustes.txt  prompt_teste_novo.txt  pyproject.toml  qa_report.json  response.json  runtime_status.json
app/agents/: copy_agent.py  hook_agent.py  scoring_agent.py  segmentation_agent.py
app/cache/: base.py  redis_cache.py
app/core/: logging.py  settings.py
app/llm/: cost_tracker.py  models.py  router.py
app/pipeline/: orchestrator_v2.py
app/pipeline/steps/: candidate_builder.py  chunking.py
app/telegram/: bot.py
app/utils/: hashing.py  transcript_utils.py
clipflow-api/: Dockerfile  alembic.ini  pyproject.toml
clipflow-api/alembic/: env.py
clipflow-api/alembic/versions/: 009e9c12ac00_initial_schema.py  8f3c2d1ab4c7_add_worker_refactor_artifacts.py  a1d4b6e8f902_add_refactor_job_events.py  c2f9e6a7b1d4_add_audit_logs.py  d4a1f2c8e9b3_add_private_scheduler_tables.py  e7b9c4a2d601_add_script_jobs.py
clipflow-api/app/: main.py
clipflow-api/app/api/: admin.py  auth.py  internal_worker.py  job_events.py  job_state.py  jobs.py  products.py  purchases.py  register.py  router.py  script_jobs.py  users.py
clipflow-api/app/core/: settings.py
clipflow-api/app/db/: base.py  session.py
clipflow-api/app/models/: __init__.py  audit_log.py  billing_product.py  clip_asset.py  clip_job.py  enums.py  idempotency_key.py  job_event.py  job_lease.py  job_queue.py  private_scheduler_profile.py  private_scheduler_run.py  purchase.py  script_job.py  usage_metric.py  user.py
clipflow-api/app/security/: access_control.py  auth_middleware.py  jwt_service.py  phone.py
clipflow-api/app/services/: artifact_content_service.py  asset_url_service.py  audit_service.py  bootstrap_service.py  job_artifact_sync.py  otp_service.py  pipeline_progress.py  private_scheduler_service.py  script_agent_service.py
control-plane/: Dockerfile  pyproject.toml
control-plane/app/: api.py  auth.py  bot.py  health_server.py  job_creator.py  job_registry.py  job_watcher.py  logging_setup.py  main.py  queue_publisher.py  settings.py  telegram_notify.py  telegram_sender.py
docs/: DOCKER_COMPOSE.md  OPERATIONS.md  SAAS_V2_PRODUCT_PLAN.md  V3_PRODUCTION_PLAN.md
k8s/: README.md  control-plane-deployment.yaml  deployment.yaml  minio.yaml  namespace.yaml  rbac-control-plane.yaml  redis.yaml  secret.yaml  secrets.yaml
prompts/: copy_v1.txt  hook_v1.txt  scoring_v1.txt  segmentation_v1.txt
tests/: test_chunking.py
worker/: .dockerignore  Dockerfile  Dockerfile.gpu  Dockerfile.gpu.base  pyproject.toml
worker/app/: main.py  pipeline_run.py  settings.py  telegram_notify.py
worker/app/integrations/: ai_client.py  api_prompt_builder.py  clipflow_api_client.py  prompt_router.py  telegram_sender.py
worker/app/media/: __init__.py  audio_extractor.py  diarizer.py  downloader.py  transcriber.py  transcript_merger.py
worker/app/observability/: __init__.py  artifact_tracker.py  logging.py  runtime_tracker.py
worker/app/pipeline/: audio_peak_detector.py  auto_review.py  candidate_builder.py  chunker.py  clipsai_candidate_provider.py  delivery_package_builder.py  hook_detector.py  manual_prompt_builder.py  pipeline.py  prepare_pipeline.py  presets.py  publish_package_builder.py  render_plan_builder.py  scorer.py  soundtrack_selector.py  span_catalog_builder.py  story_shift_detector.py  subtitle_builder.py
worker/app/prompts/: api_prompt_builder.py  manual_prompt_builder.py  prompt_context.py  prompt_worker.py  raw_edit_prompt_builder.py  system_prompt.txt
worker/app/storage/: minio_client.py
worker/app/video/: cutter.py  final_renderer.py  qa.py  raw_edit_renderer.py
worker/assets/soundtracks/: README.md
worker/scripts/: preload_asr_models.py
worker/tests/: test_auto_review.py  test_candidate_pipeline.py  test_chunker.py  test_clip_qa.py  test_delivery_package_builder.py  test_diarizer.py  test_observability.py  test_prompt_builder.py  test_transcript_merger.py
