[tool.poetry]
name = "voxmind-v2"
version = "0.1.0"
description = "VoxMind V2 - Telegram-driven video cutting pipeline (MVP skeleton)"
authors = ["ninja <ninja@local>"]
readme = "README.md"
packages = [{include = "voxmind"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
httpx = "^0.27.0"
tenacity = "^8.3.0"
redis = "^5.0.7"
python-telegram-bot = "^21.4"
rich = "^13.7.1"
orjson = "^3.10.6"
uvloop = {version="^0.19.0", markers="sys_platform != 'win32'"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
pytest = "^8.2.2"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
