[tool.poetry]
name = "voxmind-control-plane"
version = "0.1.0"
description = "VoxMind V2 control-plane (FastAPI) that schedules Kubernetes Jobs."
authors = ["VoxMind"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {version="^0.30.0", extras=["standard"]}
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
python-json-logger = "^2.0.7"
httpx = "^0.27.0"
tenacity = "^9.0.0"
kubernetes = "^30.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.6.0"

[tool.ruff]
line-length = 100
target-version = "py311"
