[tool.poetry]
name = "voxmind-control-plane"
version = "0.1.0"
description = "VoxMind V2 control-plane that schedules Kubernetes Jobs."
authors = ["VoxMind"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

# API / control-plane
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }

# Telegram bot
python-telegram-bot = "^21.4"

# Core infra
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
redis = "^5.0.4"

# Logging
python-json-logger = "^2.0.7"

# HTTP client
httpx = "^0.27.0"

# Retry logic
tenacity = "^9.0.0"

# Kubernetes client
kubernetes = "^30.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.6.0"


[tool.ruff]
line-length = 100
target-version = "py311"