[tool.poetry]
name = "voxmind-worker"
version = "0.1.0"
description = "VoxMind V2 worker executed as Kubernetes Job."
authors = ["VoxMind"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
python-json-logger = "^2.0.7"
httpx = "^0.27.0"
tenacity = "^9.0.0"
minio = "^7.2.0"

yt-dlp = "^2024.3.10"
faster-whisper = "^1.0.0"
onnxruntime = "^1.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.6.0"

[tool.ruff]
line-length = 100
target-version = "py311"
