[tool.poetry]
name = "voxmind-worker"
version = "0.2.0"
description = "VoxMind V2 worker executed as Kubernetes Job."
authors = ["VoxMind"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
python-json-logger = "^2.0.7"

# FIX conflito telegram-bot
httpx = "0.26.*"

tenacity = "^9.0.0"
minio = "^7.2.0"
requests = "^2.32.0"
redis = "^5.0.4"

yt-dlp = "^2025.3.26"
faster-whisper = "^1.0.0"
python-telegram-bot = "^20.7"
onnxruntime = "^1.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.6.0"

[tool.ruff]
line-length = 100
target-version = "py311"